# client-audit-log-flows-grpc

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
src/: main.rs  settings.rs
src/app/: app_ctx.rs  mod.rs
src/flows/: get_trader_account_credentials.rs  insert_trader_account_order_flow.rs
src/grpc/: client_audit_logs_grpc_service.rs  grpc_service.rs  mappers.rs  mod.rs  server.rs
src/postgres/: dto.rs  mod.rs  repo.rs  serializable.rs  utils.rs
