[package]
name = "client-audit-logs-flows-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-is-alive-shared = { tag = "0.5.0", git = "https://github.com/MyJetTools/http-is-alive-shared.git" }

my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }
my-seq-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-seq-logger.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-no-sql-server-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }
my-no-sql-data-writer = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-no-sql-data-writer.git" }
my-nosql-contracts = { tag = "0.1.0", git = "https://github.com/my-prop-trading/my-nosql-contracts.git" }

my-postgres-macros = { tag = "0.4.3", git = "https://github.com/MyJetTools/my-postgres-macros.git" }
my-postgres = { tag = "0.4.3", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-logs-and-telemetry",
    "with-tls",
] }

flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }

my-grpc-extensions = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
my-grpc-client-macros = { tag = "0.1.0", git ="https://github.com/MyJetTools/my-grpc-client-macros.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

encryption = { tag = "0.1.2", git = "https://github.com/my-cfd-platform/encryption.git" }

my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-telemetry-writer = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }

my-service-bus-tcp-client = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
my-service-bus-tcp-shared = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-service-bus-tcp-shared.git" }
my-service-bus-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-service-bus-abstractions.git", features = [
    "with-telemetry",
] }
prop-engine-sb-contracts = { tag = "0.1.0", git = "https://github.com/my-prop-trading/prop-engine-sb-contracts.git", features = [
    "payment-order",
] }


tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
anyhow = "*"
signal-hook = "*"
tokio-postgres = { version = "*" }
serde = "*"
serde_json = "*"
serde_yaml = "*"
serde_derive = "*"
serde_postgres = "*"
tokio-pg-mapper = "*"
tokio-pg-mapper-derive = "*"
uuid = { version = "*", features = ["v4"] }
sha2 = "*"
async-trait = "*"
chrono = "*"
base64 = "*"
tokio-stream = "*"
futures-core = "*"
rand = "*"

moka = { version = "0.11", features = ["future"] }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
