[package]
name = "client-audit-logs-flows-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encryption = { tag = "0.1.2", git = "https://github.com/my-cfd-platform/encryption.git" }

service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "postgres",
    "grpc",
    "macros",
] }

my-nosql-contracts = { tag = "0.5.0", git = "https://github.com/my-prop-trading/my-nosql-contracts.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
anyhow = "*"
signal-hook = "*"
tokio-postgres = { version = "*" }
serde = "*"
serde_json = "*"
serde_yaml = "*"
serde_derive = "*"
serde_postgres = "*"
tokio-pg-mapper = "*"
tokio-pg-mapper-derive = "*"
uuid = { version = "*", features = ["v4"] }
sha2 = "*"
async-trait = "*"
chrono = "*"
base64 = "*"
tokio-stream = "*"
futures-core = "*"
rand = "*"

moka = { version = "0.11", features = ["future"] }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
